--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
             <button class="start">Start</button>
             <button class="erase">Erase</button>
         </div>
-        <div class="render"></div>
+        <div class="output">
+            <div class="k-position"></div>
+            <div class="number-k"></div>
+            <div class="render"></div>
+        </div>
+        
 
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
