add label and new sq, refactor code

--- a/index.html
+++ b/index.html
@@ -19,16 +19,20 @@
             <button class="erase">Erase</button>
         </div>
         <div class="output">
-            <div class="k-position"></div>
-            <div class="number-k"></div>
-            <div class="render"></div>
+         <div></div>
+         <div class="title">Position of K</div>
+           <div class="title"> Sequence N' to C'</div>
+           <div class="title">Sequence ID</div>
+           <div class="title">Sequence N' to C'</div>
+          <div class="title">Length</div>    
+        <div></div> 
         </div>
         
 
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="index.js" async defer></script>
     </body>
 </html>
